<resources>
    <string name="app_name">MeetingApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_reminder">Reminder</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_meeting">Meeting Activity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="ajenda">Agenda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_place_key">AIzaSyDVVeai70WbLzeNSweyATnsqtk4D8YJsRc</string>
    <string name="title_activity_near_by_location">NearByLocationActivity</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="rationale_no_permission">Please Provide Permission</string>
    <string name="preferences_meeting">Meeting</string>
    <string name="preferences_category_notification">Notification</string>
    <string name="preferences_category_meeting">Meeting</string>
    <string name="preferences_category_priorities">Priorities </string>
    <string name="pref_meeting">Meeting</string>
    <string name="meeting">Meeting </string>
    <string name="ringtone">Ringtone</string>
    <string name="notification_sound">Notification Ringtone</string>
    <string name="notification_vibrate">Notification Vibrate</string>
    <string name="reminder_priorities">Reminder Priorities</string>
    <string name="pref_do_not_disturb">MYPREF_MEETING_MODE</string>
    <string name="pref_do_not_vibrate">Vibrate</string>
    <string name="pref_meeting_sound">Sound</string>
    <string name="pref_notification_sound">Sounds</string>
    <string name="pref_reminder_priories">priority</string>
    <string name="pref_reminder_priorities_switch_summ">Set Reminder Priorities</string>
    <string name="preferences_notification_vibrate_summ">Check vibrating at notification </string>
    <string name="pref_notification_sound_switch_summ">Set Ringtone for Notification </string>
    <string name="pref_meeting_ringtone_switch_summ">Set Ringtone For Meeting   </string>
    <string name="pref_vibrate_meeting_switch_summ">Check for Vibration In Meeting Mode . </string>
    <string name="pref_do_not_disturb_meeting_switch_summ">Switching For Accept  "Do Not Disturb " At Meeting Mode . </string>
    <string name="pref_meeting_switch_summ">Switching For Accept Meeting Mode . </string>
    <string name="pref_notification_vibrate">Vibrates</string>
    <string name="title_activity_setting">settingActivity</string>
    <string name="pririoties">Priorities</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="notificatin_ringtone">Select Ringtone</string>
    <string name="notification_toggle">Notification Toggle</string>
    <string name="pref_high_priories">High Priority</string>
    <string name="pref_high_priorities_switch_summ">Set High Priority </string>
    <string name="pref_medium_priorities_switch_summ">Set Medium Priority </string>
    <string name="pref_low_priorities_switch_summ">Set Low Priority </string>
    <string name="pref_medium_priories">Medium Priority</string>
    <string name="pref_low_priories">Low Priority</string>
    <string name="pref_notification_toggle_switch_summ">Switching For Notification Toggle</string>
    <string name="pref_notification_toggle">Notification Toggle</string>
    <string name="high_priorities">High Priority</string>
    <string name="medium_priorities">Medium Priority</string>
    <string name="low_priorities">Low Priority</string>
    <string-array name="dialog_single_choice_array">
        <item>Local ring tone</item>
        <item>None</item>
        <item>Brisk</item>
        <item>Cloud</item>
        <item>Drum</item>
        <item>Echo</item>
    </string-array>
    <string-array name="dialog_single_choice_array_priorities">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string-array name="dialog_single_choice_array_high_priorities">
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>
    <string-array name="dialog_single_choice_array_medium_priorities">
        <item>2</item>
        <item>3</item>


    </string-array>
    <string-array name="dialog_single_choice_array_low_priorities">
        <item>1</item>
        <item>2</item>


    </string-array>
    <string name="title_activity_import_meeting">ImportMeetingActivity</string>
    <string name="show_message">
         Title:______\n
        Date:_________\n
        StartTime:___________\n
        EndTime:____________\n

    </string>
    <string name="title_activity_import_message_detail">ImportMessageDetailActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_add_meeting_note">AddMeetingNoteActivity</string>
    <string name="title_activity_wallet_meeting">WalletMeetingActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="add_friends">Add Participent</string>
    <string name="ok">Ok</string>
    <string name="friend">Person</string>
    <string name="friends">People</string>
    <string name="add">Add</string>
    <string name="title_activity_tag">TAGActivity</string>
</resources>